--- a/SmartLink.ini
+++ b/SmartLink.ini
@@ -17,15 +17,14 @@ custom_proxy_group=⚙️ 节点选择`select`[]🇭🇰 香港节点`[]🇯🇵
 custom_proxy_group=Ⓜ️ 微软服务`select`[]⚙️ 节点选择`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]✅ 手动切换
 custom_proxy_group=🍎 苹果服务`select`[]⚙️ 节点选择`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]✅ 手动切换
 custom_proxy_group=🤖 人工智能`select`[]⚙️ 节点选择`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]✅ 手动切换
-custom_proxy_group=📺 国外媒体`select`[]⚙️ 节点选择`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇭🇰 香港流量`[]🇺🇲 美国流量`[]✅ 手动切换
-custom_proxy_group=🐟 漏网之鱼`select`[]⚙️ 节点选择`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇭🇰 香港流量`[]🇺🇲 美国流量`[]✅ 手动切换
+custom_proxy_group=📺 国外媒体`select`[]⚙️ 节点选择`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇭🇰 通用流量`[]🇺🇲 美国流量`[]✅ 手动切换
+custom_proxy_group=🐟 漏网之鱼`select`[]⚙️ 节点选择`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇭🇰 通用流量`[]🇺🇲 美国流量`[]✅ 手动切换
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
-custom_proxy_group=🍃 网络净化`select`[]REJECT
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`180,,50
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`180,,50
 custom_proxy_group=🇺🇲 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`180,,100
-custom_proxy_group=🇭🇰 香港流量`url-test`(香港 - IEPL - SS/SSR - )`http://www.gstatic.com/generate_204`180,,50
-custom_proxy_group=🇺🇲 美国流量`url-test`(美国 - IEPL - SS/SSR - )`http://www.gstatic.com/generate_204`180,,100
+custom_proxy_group=🇭🇰 通用流量`url-test`(香港实验性 IEPL 中继 1|新加坡实验性 IEPL 中继 1|日本实验性 IEPL 中继 1)`http://www.gstatic.com/generate_204`180,,50
+custom_proxy_group=🇺🇲 美国流量`url-test`(美国实验性 IEPL 中继 1)`http://www.gstatic.com/generate_204`180,,100
 custom_proxy_group=✅ 手动切换`select`.*
 
 enable_rule_generator=true
