--- a/SmartLinkHome.ini
+++ b/SmartLinkHome.ini
@@ -2,9 +2,10 @@ ruleset=🎯 全球直连,[]GEOSITE,private
 ruleset=🎯 全球直连,[]GEOIP,private,no-resolve
 ruleset=🤖 人工智能,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=🤖 人工智能,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bing/Bing.list
-ruleset=📲 谷歌服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
+ruleset=🌏 谷歌服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
+ruleset=📲 电报消息,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
 ruleset=📺 国外媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
 ruleset=⚙️ 节点选择,[]GEOSITE,geolocation-!cn
 ruleset=🎯 全球直连,[]GEOSITE,cn
@@ -12,10 +13,11 @@ ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=⚙️ 节点选择`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT`[]✅ 手动切换
-custom_proxy_group=📲 谷歌服务`select`[]⚙️ 节点选择`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]✅ 手动切换
+custom_proxy_group=🤖 人工智能`select`[]⚙️ 节点选择`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]✅ 手动切换
+custom_proxy_group=🌏 谷歌服务`select`[]⚙️ 节点选择`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]✅ 手动切换
 custom_proxy_group=Ⓜ️ 微软服务`select`[]⚙️ 节点选择`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]✅ 手动切换
 custom_proxy_group=🍎 苹果服务`select`[]⚙️ 节点选择`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]✅ 手动切换
-custom_proxy_group=🤖 人工智能`select`[]⚙️ 节点选择`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]✅ 手动切换
+custom_proxy_group=📲 电报消息`select`[]⚙️ 节点选择`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇭🇰 通用流量`[]🇺🇲 美国流量`[]✅ 手动切换
 custom_proxy_group=📺 国外媒体`select`[]⚙️ 节点选择`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇭🇰 通用流量`[]🇺🇲 美国流量`[]✅ 手动切换
 custom_proxy_group=🐟 漏网之鱼`select`[]⚙️ 节点选择`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇭🇰 通用流量`[]🇺🇲 美国流量`[]✅ 手动切换
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
