--- a/SmartLink.ini
+++ b/SmartLink.ini
@@ -7,6 +7,8 @@ ruleset=🌏 谷歌服务,https://raw.githubusercontent.com/blackmatrix7/ios_rul
 ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
 ruleset=📲 电报消息,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Download/Download.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/GameDownload/GameDownload.list
 ruleset=⚙️ 节点选择,[]GEOSITE,geolocation-!cn
 ruleset=🎯 全球直连,[]GEOSITE,cn
 ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
