--- a/SmartLink.ini
+++ b/SmartLink.ini
@@ -1,15 +1,12 @@
 ruleset=🎯 全球直连,[]GEOSITE,private
 ruleset=🎯 全球直连,[]GEOIP,private,no-resolve
-ruleset=🤖 人工智能,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
-ruleset=🤖 人工智能,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bing/Bing.list
+ruleset=🤖 人工智能,https://raw.githubusercontent.com/DustinWin/ruleset_geodata/refs/heads/clash-ruleset/ai.list
 ruleset=📺 国外媒体,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geosite/classical/proxymedia.list
 ruleset=🌏 谷歌服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
-ruleset=🍎 苹果服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
-ruleset=📲 电报消息,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Download/Download.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/GameDownload/GameDownload.list
-ruleset=⚙️ 节点选择,[]GEOSITE,geolocation-!cn
+ruleset=⚙️ 节点选择,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geosite/classical/proxy.list
 ruleset=🎯 全球直连,[]GEOSITE,cn
 ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
