--- a/SmartLinkHome.ini
+++ b/SmartLinkHome.ini
@@ -7,6 +7,8 @@ ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/blackmatrix7/ios_r
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Download/Download.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/GameDownload/GameDownload.list
 ruleset=⚙️ 节点选择,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geosite/classical/proxy.list
+ruleset=🎯 全球直连,[]GEOSITE,cn
+ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=⚙️ 节点选择`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT`[]✅ 手动切换
