--- a/SmartLink.ini
+++ b/SmartLink.ini
@@ -12,11 +12,11 @@ ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=⚙️ 节点选择`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT`[]✅ 手动切换
-custom_proxy_group=🤖 人工智能`select`[]⚙️ 节点选择`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]✅ 手动切换
-custom_proxy_group=🌏 谷歌服务`select`[]⚙️ 节点选择`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]✅ 手动切换
-custom_proxy_group=Ⓜ️ 微软服务`select`[]⚙️ 节点选择`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]✅ 手动切换
-custom_proxy_group=📺 国外媒体`select`[]⚙️ 节点选择`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]✅ 手动切换
-custom_proxy_group=🐟 漏网之鱼`select`[]⚙️ 节点选择`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]✅ 手动切换
+custom_proxy_group=🤖 人工智能`select`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]✅ 手动切换`[]⚙️ 节点选择`[]DIRECT
+custom_proxy_group=🌏 谷歌服务`select`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]✅ 手动切换`[]⚙️ 节点选择`[]DIRECT
+custom_proxy_group=Ⓜ️ 微软服务`select`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]✅ 手动切换`[]⚙️ 节点选择`[]DIRECT
+custom_proxy_group=📺 国外媒体`select`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]✅ 手动切换`[]⚙️ 节点选择`[]DIRECT
+custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]✅ 手动切换`[]⚙️ 节点选择`[]DIRECT
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`180,,50
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|JP|Japan)`http://www.gstatic.com/generate_204`180,,50
