--- a/SmartLink.ini
+++ b/SmartLink.ini
@@ -1,19 +1,18 @@
 ruleset=✅ 全球直连,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geosite/classical/private.list
-ruleset=✅ 全球直连,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geoip/classical/private.list
+ruleset=✅ 全球直连,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geoip/classical/private.list,no-resolve
 ruleset=🤖 人工智能,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/classical/category-ai-chat-!cn.list
 ruleset=📽️ 国外媒体,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geosite/classical/proxymedia.list
 ruleset=📈 代理节点,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geosite/classical/proxy.list
 ruleset=✅ 全球直连,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geosite/classical/private.list
-ruleset=✅ 全球直连,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geoip/classical/private.list
+ruleset=✅ 全球直连,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geoip/classical/private.list,no-resolve
 ruleset=🔝 兜底节点,[]FINAL
 
-custom_proxy_group=📈 代理节点`select`[]香港节点`[]狮城节点`[]美国节点`[]DIRECT`[]📲 手动切换
-custom_proxy_group=🤖 人工智能`select`[]美国节点`[]香港节点`[]狮城节点`[]📲 手动切换`[]📈 代理节点`[]DIRECT
-custom_proxy_group=📽️ 国外媒体`select`[]美国节点`[]香港节点`[]狮城节点`[]📲 手动切换`[]📈 代理节点`[]DIRECT
-custom_proxy_group=🔝 兜底节点`select`[]香港节点`[]狮城节点`[]美国节点`[]📲 手动切换`[]📈 代理节点`[]DIRECT
+custom_proxy_group=📈 代理节点`select`[]通用节点`[]美国节点`[]DIRECT`[]📲 手动切换
+custom_proxy_group=🤖 人工智能`select`[]美国节点`[]通用节点`[]📲 手动切换`[]📈 代理节点`[]DIRECT
+custom_proxy_group=📽️ 国外媒体`select`[]美国节点`[]通用节点`[]📲 手动切换`[]📈 代理节点`[]DIRECT
+custom_proxy_group=🔝 兜底节点`select`[]通用节点`[]美国节点`[]📲 手动切换`[]📈 代理节点`[]DIRECT
 custom_proxy_group=✅ 全球直连`select`[]DIRECT
-custom_proxy_group=香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`180,,50
-custom_proxy_group=狮城节点`url-test`(新|SGP|Singapore)`http://www.gstatic.com/generate_204`180,,50
+custom_proxy_group=通用节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong|新|SGP|Singapore)`http://www.gstatic.com/generate_204`180,,50
 custom_proxy_group=美国节点`url-test`(美|US|United States)`http://www.gstatic.com/generate_204`180,,100
 custom_proxy_group=📲 手动切换`select`.*
 
